Added Facebook and Authentication services. Partially completed, but stable.

--- a/Web/app/partials/home.html
+++ b/Web/app/partials/home.html
@@ -1,4 +1,4 @@
-<div ng-controller="Home">
+<div>
 	<homemenu></homemenu>
 	<div class="container body-content">
 		<p></p>
@@ -8,7 +8,7 @@
 			<p class="lead">
 				Helps delegates and organisers of Model UNs manage the boring details of the conference debate from their phone, tablet, or computer. Everyone spends less time on the Rules of Procedure and more time on the debate
 			</p>
-			<button type="button" class="btn btn-primary btn-lg" onclick="facebookLogin()">
+			<button type="button" class="btn btn-primary btn-lg" ng-click="login()">
 				Get started
 			</button>
 		</div>
