--- a/Web/app/partials/homeMenu.html
+++ b/Web/app/partials/homeMenu.html
@@ -11,7 +11,7 @@
 		<div class="navbar-collapse collapse">
 			<ul class="nav navbar-nav navbar-right">
 				<li>
-					<a href="#" onclick="facebookLogin()">Login / Register</a>
+					<a href="#" ng-click="login()">Login / Register</a>
 				</li>
 			</ul>
 		</div>
