--- a/Web/app/partials/emptyMenu.html
+++ b/Web/app/partials/emptyMenu.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-default navbar-fixed-top">
+<div class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
         <div class="navbar-header">
             <a class="navbar-brand" href="index.html">yieldto.me</a>
