--- a/Web/app/partials/home.html
+++ b/Web/app/partials/home.html
@@ -31,7 +31,7 @@
             <div class="col-md-3">
                 <h2>
                     <span class="glyphicon glyphicon-user"></span> Profiles</h2>
-                <p>Create your own yieldto.me Profile- choose who you want to share your contact details with. Or, stay behind your delegate persona. Keep in touch with everyone after the conference too</p>
+                <p>Create your own yieldto.me Profile- share contact details, or, stay behind your delegate persona. Keep in touch with everyone after the conference too</p>
             </div>
         </div>
     </div>
