--- a/Web/app/partials/profile.html
+++ b/Web/app/partials/profile.html
@@ -1,10 +1,12 @@
 <div>
-    <emptymenu></emptymenu>
+    <eventsmenu></eventsmenu>
     <div class="container body-content">
         <h2>{{title}}
             <br/>
             <small>{{profile.Name}}</small>
         </h2>
+        <div class="alert alert-info" ng-show="info">{{info}}</div>
+        <div class="alert alert-danger" ng-show="error"><b>Doh! </b>{{error}}</div>
         <form name="form" role="form" class="css-form form-horizontal" novalidate>
             <div class="col-sm-3 hidden-xs">
                 <img ng-src="{{profile.ProfilePictureUri}}?type=large" class="img-responsive img-circle" />
@@ -14,7 +16,7 @@
                     <div class="input-group">
                         <span class="input-group-addon" style="min-width:65px">name</span>
                         <input name="name" class="form-control" type="text" ng-model="profile.Name" required placeholder="Your name" />
-                        <span class="form-control validation"  ng-show="form.name.$invalid">We need your name</span>
+                        <span class="form-control validation" ng-show="form.name.$invalid">We need your name</span>
                     </div>
                 </div>
                 <div class="form-group ">
@@ -40,7 +42,7 @@
                 </div>
                 <div class="row">
                     <div class="text-right">
-                        <button type="button" ng-click="$back()" class="btn btn-default">Cancel</button>
+                        <button type="button" ng-click="$back()" class="btn btn-default">{{alternatebutton}}</button>
                         <button type="submit" ng-disabled="form.$invalid" ng-click="save()" class="btn btn-primary">Save</button>
                     </div>
                 </div>
