--- a/Web/app/partials/profile.html
+++ b/Web/app/partials/profile.html
@@ -1,5 +1,5 @@
 <div>
-    <eventsmenu></eventsmenu>
+    <menu></menu>
     <div class="container body-content">
         <h2>{{title}}
             <br/>
@@ -15,14 +15,14 @@
                 <div class="form-group">
                     <div class="input-group">
                         <span class="input-group-addon" style="min-width:65px">name</span>
-                        <input name="name" class="form-control" type="text" ng-model="profile.Name" required placeholder="Your name" />
+                        <input name="name" class="form-control" type="text" ng-model="profile.Name" ng-disabled="formDisabled" required placeholder="Your name" />
                         <span class="form-control validation" ng-show="form.name.$invalid">We need your name</span>
                     </div>
                 </div>
                 <div class="form-group ">
                     <div class="input-group">
                         <span class="input-group-addon" style="min-width:65px">email</span>
-                        <input name="email" class="form-control" type="email" ng-model="profile.Email" required placeholder="your@email.com" />
+                        <input name="email" class="form-control" type="email" ng-model="profile.Email" ng-disabled="formDisabled" required placeholder="your@email.com" />
                         <span class="form-control validation" ng-show="form.email.$invalid">This email looks wrong</span>
                     </div>
                 </div>
@@ -30,20 +30,20 @@
                     <div class="input-group">
                         <span class="input-group-addon" style="min-width:65px">phone</span>
                         <!-- TODO: Add in Regex validation for phone number -->
-                        <input class="form-control" type="text" ng-model="profile.Phone" placeholder="555-123-4567" />
+                        <input class="form-control" type="text" ng-model="profile.Phone" ng-disabled="formDisabled" placeholder="555-123-4567" />
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="input-group">
                         <span class="input-group-addon" style="min-width:65px">twitter</span>
                         <!-- TODO: Add in Regex validation for Twitter -->
-                        <input class="form-control" type="text" ng-model="profile.Twitter" placeholder="yourTwitterName" />
+                        <input class="form-control" type="text" ng-model="profile.Twitter" ng-disabled="formDisabled" placeholder="yourTwitterName" />
                     </div>
                 </div>
                 <div class="row">
                     <div class="text-right">
                         <button type="button" ng-click="$back()" class="btn btn-default">{{alternatebutton}}</button>
-                        <button type="submit" ng-disabled="form.$invalid" ng-click="save()" class="btn btn-primary">Save</button>
+                        <button type="submit" ng-disabled="form.$invalid" ng-hide="formDisabled" ng-click="save()" class="btn btn-primary">Save</button>
                     </div>
                 </div>
             </div>
