--- a/Web/app/partials/event.html
+++ b/Web/app/partials/event.html
@@ -8,7 +8,7 @@
         <div class="alert alert-info" ng-show="info">{{info}}</div>
         <div class="alert alert-danger" ng-show="error"><b>Doh! </b>{{error}}</div>
         <form name="form" role="form" class="css-form form-horizontal" novalidate>
-           <div style="margin-left:15px; margin-right:15px">
+            <div style="margin-left:15px; margin-right:15px">
                 <div class="form-group">
                     <div class="input-group">
                         <span class="input-group-addon" style="min-width:65px">name</span>
@@ -32,17 +32,36 @@
                 <div class="form-group">
                     <div class="input-group">
                         <span class="input-group-addon" style="min-width:65px">end</span>
-                        <input name="endDate" class="form-control" type="date" ng-model="endDateAsString"  pattern="dd/MM/YYYY" required min="{{startDateAsString}}" />
+                        <input name="endDate" class="form-control" type="date" ng-model="endDateAsString" pattern="dd/MM/YYYY" required min="{{startDateAsString}}" />
                         <span class="form-control validation" ng-show="form.endDate.$error.required">It's gotta end at some point!</span>
                     </div>
                 </div>
                 <div class="row">
                     <div class="text-right">
                         <button type="button" ng-click="$back()" class="btn btn-default">{{alternatebutton}}</button>
+                        <button type="button" data-toggle="modal" data-target="#deleteModal" ng-show="isDeleteEnabled" class="btn btn-danger">Delete</button>
                         <button type="submit" ng-disabled="form.$invalid" ng-click="save()" class="btn btn-primary">Save</button>
                     </div>
                 </div>
             </div>
         </form>
     </div>
+    <div class="modal fade"  id="deleteModal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title">Really?</h4>
+                </div>
+                <div class="modal-body">
+                    <p>Once you delete an Event it is gone forever, and no one will be able to access it.</p>
+                    Are you sure you want to delete '{{event.Name}}'?
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-danger"  data-dismiss="modal" ng-click="delete()">Delete</button>
+                </div>
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
 </div>
