--- a/Web/app/partials/home.html
+++ b/Web/app/partials/home.html
@@ -16,12 +16,12 @@
             <div class="col-md-3">
                 <h2>
                     <span class="glyphicon glyphicon-list-alt"></span> Speakers Lists</h2>
-                <p>Create Speakers Lists. Have delegates add themselves to speak on them from their phone, tablet or computer. Shuffle the order and make sure you never lose track</p>
+                <p>Create Speakers Lists. Have delegates add themselves to speak on them from their phone, tablet or computer. Shuffle the order and never lose track</p>
             </div>
             <div class="col-md-3">
                 <h2>
                     <span class="glyphicon glyphicon-ok"></span> Voting</h2>
-                <p>Create a Poll and ask delegates to cast their Vote. See the Votes come in in real time and see whether or not the Vote has passed or failed</p>
+                <p>Create a Poll and ask delegates to cast their Vote. See the Votes come in in real time and see whether or not the Poll has passed or failed</p>
             </div>
             <div class="col-md-3">
                 <h2>
