--- a/Web/app/partials/event/attend.html
+++ b/Web/app/partials/event/attend.html
@@ -10,7 +10,7 @@
         <form name="form" role="form" class="css-form form-horizontal" style="margin:15px" novalidate>
             <div class="form-group">
                 <div class="input-group">
-                    <span class="input-group-addon" style="min-width:65px">Representing</span>
+                    <span class="input-group-addon" style="min-width:65px">representing</span>
                     <input name="name" class="form-control" type="text" ng-model="name" ng-disabled="formDisabled" required placeholder="Your delegation name" />
                     <span class="form-control validation" ng-show="form.name.$invalid && form.$dirty">We need your delegation name</span>
                 </div>
