--- a/Web/app/partials/event/landing.html
+++ b/Web/app/partials/event/landing.html
@@ -8,20 +8,22 @@
         <div class="alert alert-info" ng-show="info">{{info}}</div>
         <div class="alert alert-danger" ng-show="error"><b>Doh! </b>{{error}}</div>
         <div class="list-group">
-            <a href="#/speakers" class="list-group-item">
+            <a href="#/speakersLists" class="list-group-item">
                 <h2>
                     <span class="glyphicon glyphicon-list-alt"></span> Speakers Lists</h2>
                 <p>Create Speakers Lists. Have delegates add themselves to speak on them. Shuffle the order and never lose track</p>
             </a>
-            <a href="#/polls" class="list-group-item">
+            <a class="list-group-item">
                 <h2>
                     <span class="glyphicon glyphicon-ok"></span> Voting</h2>
                 <p>Create a Poll and ask delegates to cast their Vote. See the Votes come in in real time and see whether or not the Poll has passed or failed</p>
+                <div class="alert alert-danger">We haven't finished this yet</div>
             </a>
-            <a href="#/chat" class="list-group-item">
+            <a class="list-group-item">
                 <h2>
                     <span class="glyphicon glyphicon-envelope"></span> Note passing</h2>
                 <p>Message other delegates in real-time without needing to exchange your phone, email, or IM details</p>
+                <div class="alert alert-danger">We haven't finished this yet</div>
             </a>
         </div>
     </div>
