--- a/Web/app/partials/event/attend.html
+++ b/Web/app/partials/event/attend.html
@@ -1,5 +1,5 @@
 <div>
-    <menu></menu>
+    <ytm-menu></ytm-menu>
     <div class="container body-content">
         <h2>Attend
             <br/>
