--- a/Web/app/partials/event/landing.html
+++ b/Web/app/partials/event/landing.html
@@ -1,5 +1,5 @@
 <div>
-    <navmenu></navmenu>
+    <ytm-nav-menu></ytm-nav-menu>
     <div class="container body-content">
         <h2>{{event.Name}}
             <br/>
