--- a/Web/app/partials/home.html
+++ b/Web/app/partials/home.html
@@ -1,5 +1,5 @@
 <div>
-    <homemenu></homemenu>
+    <ytm-home-menu></ytm-home-menu>
     <div class="container body-content">
         <p></p>
         <p></p>
