--- a/Web/app/partials/speakersList/speakersLists.html
+++ b/Web/app/partials/speakersList/speakersLists.html
@@ -1,5 +1,5 @@
 <div>
-    <navmenu></navmenu>
+    <ytm-nav-menu></ytm-nav-menu>
     <div class="container body-content">
         <div class="alert alert-info" ng-show="info">{{info}}</div>
         <div class="alert alert-danger" ng-show="error"><b>Doh! </b>{{error}}</div>
