--- a/Web/app/css/app.css
+++ b/Web/app/css/app.css
@@ -36,5 +36,5 @@ body {
     color: #a94442
 }
 
-/* angular-ui fix */
+/* angular-ui fix (per http://angular-ui.github.io/bootstrap/) */
 .nav, .pagination, .carousel, .panel-title a { cursor: pointer; }
