--- a/Web/app/partials/event/events.html
+++ b/Web/app/partials/event/events.html
@@ -23,6 +23,7 @@
                         </div>
                     </div>
                 </div>
+                <div class="well" ng-show="events.length == 0">There are no upcoming yieldto.me events</div>
                 <a href="" ng-click="selectEvent(event)" class="list-group-item" ng-repeat="event in events | filter:query">
                     <h4 class="list-group-item-heading">{{event.Name}}</h4>
                     <div class="btn-group pull-right" ng-show="event.CreatorID == profile.ProfileID">
