--- a/Web/app/partials/speakersList/speakersLists.html
+++ b/Web/app/partials/speakersList/speakersLists.html
@@ -26,6 +26,7 @@
                         </div>
                     </div>
                 </div>
+                <div class="well" ng-show="lists.length == 0">There is not yet any Speakers lists</div>
                 <a href="#/speakers/{{list.SpeakersListID}}" class="list-group-item" ng-repeat="list in lists | filter:query">
                     <h4 class="list-group-item-heading">{{list.Name}}</h4>
                     <div style="background-color:lightgreen; height:5px" ng-show="list.Status == 'Open'"></div>
