--- a/Web/app/partials/menus/homeMenu.html
+++ b/Web/app/partials/menus/homeMenu.html
@@ -1,14 +1,14 @@
 <div class="navbar navbar-default navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <button type="button" class="navbar-toggle" ng-click="isNavOpen = !isNavOpen">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="index.html">yieldto.me</a>
         </div>
-        <div class="navbar-collapse collapse">
+        <div class="navbar-collapse" collapse="!isNavOpen">
             <ul class="nav navbar-nav navbar-right">
                 <li>
                     <a href="#" ng-click="login()">Login / Register</a>
