--- a/Web/app/partials/menus/menu.html
+++ b/Web/app/partials/menus/menu.html
@@ -1,17 +1,20 @@
 <div class="navbar navbar-default navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <button type="button" class="navbar-toggle" ng-click="isNavOpen = !isNavOpen">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="#/events">yieldto.me</a>
         </div>
-        <div class="navbar-collapse collapse">
+        <div class="navbar-collapse" collapse="!isNavOpen">
             <ul class="nav navbar-nav navbar-right">
                 <li>
                     <a href="#/editProfile" ng-show="profile">{{profile.Name}}</a>
+                </li>
+                <li>
+                    <a href="#/?logout" ng-show="profile">Logout</a>
                 </li>
             </ul>
         </div>
