--- a/Web/app/partials/event/event.html
+++ b/Web/app/partials/event/event.html
@@ -39,29 +39,11 @@
                 <div class="row">
                     <div class="text-right">
                         <button type="button" ng-click="$back()" class="btn btn-default">{{alternatebutton}}</button>
-                        <button type="button" data-toggle="modal" data-target="#deleteModal" ng-show="isDeleteEnabled" class="btn btn-danger">Delete</button>
+                        <button type="button" ng-click="showDelete()" ng-show="isDeleteEnabled" class="btn btn-danger">Delete</button>
                         <button type="submit" ng-disabled="form.$invalid" ng-click="save()" class="btn btn-primary">Save</button>
                     </div>
                 </div>
             </div>
         </form>
     </div>
-    <div class="modal fade"  id="deleteModal">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                    <h4 class="modal-title">Really?</h4>
-                </div>
-                <div class="modal-body">
-                    <p>Once you delete an Event it is gone forever, and no one will be able to access it.</p>
-                    Are you sure you want to delete '{{event.Name}}'?
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-danger"  data-dismiss="modal" ng-click="delete()">Delete</button>
-                </div>
-            </div><!-- /.modal-content -->
-        </div><!-- /.modal-dialog -->
-    </div><!-- /.modal -->
 </div>
