--- a/Web/app/partials/menus/navMenu.html
+++ b/Web/app/partials/menus/navMenu.html
@@ -11,6 +11,9 @@
         <div class="navbar-collapse" collapse="!isNavOpen">
             <ul class="nav navbar-nav">
                 <li>
+                    <a href="#/landing"><b>{{event.Name}}</b></a>
+                </li>
+                <li>
                     <a href="#/speakersLists">Speakers</a>
                 </li>
                 <li>
