Fix problems of Speak dropdowns not showing at the right time

--- a/Web/app/partials/speakersList/speakers.html
+++ b/Web/app/partials/speakersList/speakers.html
@@ -8,13 +8,12 @@
                 </br>
                 <small>{{event.Name}}</small>
             </h2>
+            <div style="background-color:lightgreen; height:5px; margin-bottom:5px" ng-show="list.Status == 'Open'"></div>
+            <div style="background-color:red; height:5px; margin-bottom:5px" ng-show="list.Status == 'Closed'"></div>
             <!-- Nav Pills -->
             <ul class="nav nav-pills">
-                <!-- Speakers list status -->
-                <li ng-show="list.Status == 'Open'"><h4><span class="label label-success">Open</span></h4></li>               
-                <li ng-show="list.Status == 'Closed'"><h4><span class="label label-danger">Closed</span></h4></li>
                 <!-- Add myself as a Speaker -->
-                <li class="dropdown" ng-show="list.Status == 'Open'" ng-hide="speakingSlot">
+                <li class="dropdown" ng-show="list.Status == 'Open' && speakingSlot==null">
                     <a class="dropdown-toggle" data-toggle="dropdown">
                         <span class="glyphicon glyphicon-bullhorn"></span> Speak <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
@@ -32,8 +31,8 @@
                     <a class="dropdown-toggle" data-toggle="dropdown">
                         <span class="glyphicon glyphicon glyphicon-cog"></span> <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
-                        <li ng-show="list.Status == 'Open'" ng-click="closeList()"><a>Close list to new Speakers</a></li>
-                        <li ng-show="list.Status == 'Closed'" ng-click="openList()"><a>Open list to new Speakers</a></li>
+                        <li ng-show="list.Status == 'Open'" ng-click="closeList()"><a>Close to new Speakers</a></li>
+                        <li ng-show="list.Status == 'Closed'" ng-click="openList()"><a>Open to new Speakers</a></li>
                         <li ng-click="removeAllSpeakers()"><a>Remove all Speakers</a></li>
                         <li class="divider"></li>
                         <li ng-click="showDeleteList()"><a>Delete this Speakers list</a></li>
@@ -41,8 +40,8 @@
                 </li>
             </ul>
             <div class="well" ng-show="speakers.length == 0">There is not yet any Speakers on this Speakers list</div>
-            <ytm-speaker-list ng-hide="isCarouselVisible || event.CreatorID == profile.ProfileID || list.CreatorID == profile.ProfileID"></ytm-speaker-list>
-            <ytm-editable-speaker-list ng-hide="isCarouselVisible" ng-show="event.CreatorID == profile.ProfileID || list.CreatorID == profile.ProfileID"></ytm-editable-speaker-list>
+            <ytm-speaker-list ng-hide="event.CreatorID == profile.ProfileID || list.CreatorID == profile.ProfileID"></ytm-speaker-list>
+            <ytm-editable-speaker-list ng-show="event.CreatorID == profile.ProfileID || list.CreatorID == profile.ProfileID"></ytm-editable-speaker-list>
         </div>
     </div>
 </div>
