--- a/Web/app/partials/speakersList/editableSpeakerList.html
+++ b/Web/app/partials/speakersList/editableSpeakerList.html
@@ -5,7 +5,7 @@
             <div class="media-body">
                 <div class="btn-group pull-right">
                     <button type="button" ng-show="$index == 0" ng-click="speak(speaker)" class="btn btn-default">
-                        <span class="glyphicon glyphicon-comment"></span>
+                        <span class="glyphicon glyphicon-ok"></span>
                     </button>
                     <button type="button" ng-click="remove(speaker)" class="btn btn-default">
                         <span class="glyphicon glyphicon-remove"></span>
