Added half finished Polls functionality + tests

--- a/Web/app/partials/event/landing.html
+++ b/Web/app/partials/event/landing.html
@@ -13,11 +13,10 @@
                     <span class="glyphicon glyphicon-list-alt"></span> Speakers Lists</h2>
                 <p>Create Speakers Lists. Have delegates add themselves to speak on them. Shuffle the order and never lose track</p>
             </a>
-            <a class="list-group-item">
+            <a href="#/polls" class="list-group-item">
                 <h2>
                     <span class="glyphicon glyphicon-ok"></span> Voting</h2>
                 <p>Create a Poll and ask delegates to cast their Vote. See the Votes come in in real time and see whether or not the Poll has passed or failed</p>
-                <div class="alert alert-danger">We haven't finished this yet</div>
             </a>
             <a class="list-group-item">
                 <h2>
