Added placeholder for rename Speakers list functionality

--- a/Web/app/partials/speakersList/speakers.html
+++ b/Web/app/partials/speakersList/speakers.html
@@ -33,6 +33,7 @@
                     <ul class="dropdown-menu" role="menu">
                         <li ng-show="list.Status == 'Open'" ng-click="closeList()"><a>Close to new Speakers</a></li>
                         <li ng-show="list.Status == 'Closed'" ng-click="openList()"><a>Open to new Speakers</a></li>
+                        <li><a>Rename this Speakers list</a></li>
                         <li ng-click="removeAllSpeakers()"><a>Remove all Speakers</a></li>
                         <li class="divider"></li>
                         <li ng-click="showDeleteList()"><a>Delete this Speakers list</a></li>
